fixed word wrapping

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -18,7 +18,7 @@
 }
 
 .message-container{
-  word-break: break-all;
+  /* word-break: break-all; */
 }
 
 .emote{
